18987
```scala
trait T {
  type X
}

class C[X <: String] extends T {
  def foo(x: X): String = x
}
```
```
sandbox/test.scala:6: error: type mismatch;
 found   : C.this.X
 required: String
  def foo(x: X): String = x
                          ^
```
